Kleopatra uses KAboutData::componentName() instead of KAboutData::displayName() for a those UI texts.
Description
Description
Revisions and Commits
Revisions and Commits
| rKLEOPATRA Kleopatra | |||
| rKLEOPATRA1a326e18c555 Set application data before initializing KleopatraApplication | |||
| rKLEOPATRAf495f7bdc064 Add user interface markers to other system tray menu entries | |||
| rKLEOPATRA3296827c92c5 Use application display name in Really Quit? confirmation dialog | |||
| rKLEOPATRAcbe887480e12 Use display name of application for the system tray menu entries | |||