Set application data before initializing KleopatraApplication

During the initialization of KleopatraApplication the menu of the
system tray icon is set up. For the menu entries we need the display
name of the application.

GnuPG-bug-id: 5833